--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
+    "@types/leaflet": "^1.7.2",
     "@types/node": "^15.12.2",
     "@types/reach__router": "^1.3.8",
     "@types/react": "^17.0.11",
