--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.1.1",
     "i18next": "^20.3.2",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.0",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/leaflet": "^1.7.2",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
