--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
     "redux": "^4.1.0",
+    "reselect": "^4.0.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
