--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-i18next": "^11.11.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -44,7 +45,8 @@
     "workbox-range-requests": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-streams": "^5.1.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
