--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.7.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.0",
