--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@hookform/resolvers": "^2.7.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -20,6 +22,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.23.0",
     "i18next": "^20.3.2",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.0",
